minor adjustment to the REGISTER link in the login component to make sure it takes up the right amount of space both on mobile and desktop view; added a different hover color to the social media links

--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -31,6 +31,8 @@ footer {
 
 .social-media a {
   color: rgb(187,136,136);
-
 }
 
+.social-media a:hover {
+  color: white;
+}
